# ISaT-2

./: .gitignore  README.md  pyproject.toml
.docker/: docker-compose.yml
src/: main.py
src/db/: db.py
src/models/: person.py
src/repositories/: person.py  repository.py
src/routes/: __init__.py  algorithms.py  data.py
src/services/: algorithms.py  data.py
