[project]
name = "isat-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Sharov Ivan, Boyarov Daniil, Tsygankova Anna"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "neomodel (>=5.5.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
